--- a/IT-Inventory/Views/Configs/Index.cshtml
+++ b/IT-Inventory/Views/Configs/Index.cshtml
@@ -36,7 +36,7 @@
 
         <td>
             <a href='@Url.Action("Details", new { compName = item.CompName })' style="text-decoration: none">
-                <i class="material-icons md-48" style="color:black" title="Подробный отчет о конфигурации">format_list_bulleted</i>
+                <i class="material-icons md-48" style="color:black" title="Подробный отчет о конфигурации">&#xE241</i>
             </a>
 
         </td>
