--- a/IT-Inventory/Views/ItemTypes/Index.cshtml
+++ b/IT-Inventory/Views/ItemTypes/Index.cshtml
@@ -30,15 +30,15 @@
         </td>
         <td>
             <a href='@Url.Action("Edit", new {id = item.Id})' style="text-decoration: none">
-                <i class="material-icons md-48" style="color:black" title="Редактировать">edit</i>
+                <i class="material-icons md-48" style="color:black" title="Редактировать">&#xE3C9</i>
             </a>
 
             <a href='@Url.Action("Details", new {id = item.Id})' style="text-decoration: none">
-                <i class="material-icons md-48" style="color:black" title="Подробно">info_outline</i>
+                <i class="material-icons md-48" style="color:black" title="Подробно">&#xE88F</i>
             </a>
 
             <a href='@Url.Action("Delete", new { id = item.Id })' style="text-decoration:none">
-                <i class="material-icons md-48" style="color:black" title="Удалить">delete_forever</i>
+                <i class="material-icons md-48" style="color:black" title="Удалить">&#xE92B</i>
             </a>
         </td>
     </tr>
