--- a/IT-Inventory/Views/People/Index.cshtml
+++ b/IT-Inventory/Views/People/Index.cshtml
@@ -4,12 +4,17 @@
     ViewBag.Title = "Сотрудники";
 }
 
-<h2>@ViewBag.Title </h2>
-
-@if (Model.IsRefreshed)
-{
-    <h3>Список сотрудников синхронизирован с Active Directory!</h3>
-}
+<table width="100%">
+    <tr>
+        <td>
+            <h2>@ViewBag.Title</h2>
+        </td>
+        <td align="right">
+            <h2></h2>
+            @Html.ActionLink("Департаменты", "Index", "Departments", null, new { @class = "btn btn-success" })
+        </td>
+    </tr>
+</table>
 
 <ul class="pagination">
     @foreach (var firstLetter in Model.FirstLetters)
@@ -67,21 +72,26 @@
             </td>
 
             <td style="vertical-align:middle;">
-                @Html.DisplayFor(modelItem => item.DepartmentString)
+                <a href='@Url.Action("Details", "Departments", new { id = item.Dep.Id })'>
+                    @item.DepartmentString
+                </a>
             </td>
+
             <td style="vertical-align:middle;">
                 @Html.DisplayFor(modelItem => item.Position)
             </td>
+
             <td style="vertical-align:middle;">
                 <a href="mailto:@item.Email">@item.Email</a>
             </td>
+
             <td style="vertical-align:middle;">
                 <a href="tel:+@item.PhoneNumber">@item.PhoneNumber</a>
             </td>
 
             <td style="vertical-align:middle;">
                 <a href='@Url.Action("Details", new {id = item.Id})' style="text-decoration: none">
-                    <i class="material-icons md-48" style="color: black" title="Подробно">info_outline</i>
+                    <i class="material-icons md-48" style="color: black" title="Подробно">&#xE88F</i>
                 </a>
             </td>
 
@@ -89,7 +99,7 @@
                 @if (StaticData.CountComputers(item.Id) > 0)
                 {
                     <a href='@Url.Action("Index", "Computers", new {personId = item.Id})' style="text-decoration: none">
-                        <i class="material-icons md-48" style="color: black" title="Компьютер(ы)">desktop_windows</i>
+                        <i class="material-icons md-48" style="color: black" title="Компьютер(ы)">&#xE30C</i>
                     </a>
                 }
             </td>
@@ -98,7 +108,7 @@
                 @if (StaticData.CountUserGrant(item.Id) > 0)
                 {
                     <a href='@Url.Action("Index", "Histories", new {peopleId = item.Id})' style="text-decoration: none">
-                        <i class="material-icons md-48" style="color: black" title="Выданное оборудование (история)">shopping_cart</i>
+                        <i class="material-icons md-48" style="color: black" title="Выданное оборудование (история)">&#xE8CC</i>
                     </a>
                 }
             </td>
@@ -107,14 +117,14 @@
                 @if (item.SupportRequests.Count > 0)
                 {
                     <a href='@Url.Action("Index", "Support", new {searchUserId = item.Id})' style="text-decoration: none">
-                        <i class="material-icons md-48" style="color: black" title="Заявки в техподдержку">announcement</i>
+                        <i class="material-icons md-48" style="color: black" title="Заявки в техподдержку">&#xE85A</i>
                     </a>
                 }
             </td>
 
             <td style="vertical-align:middle;">
                 <a href='@Url.Action("Delete", new {id = item.Id})' style="text-decoration: none">
-                    <i class="material-icons md-48" style="color:black" title="Удалить">delete_forever</i>
+                    <i class="material-icons md-48" style="color:black" title="Удалить">&#xE92B</i>
                 </a>
             </td>
         </tr>
@@ -128,10 +138,10 @@
             @if (Model.Pager.CurrentPage > 1)
             {
                 <li>
-                    @Html.ActionLink("Первая", "Index", new { page = 1 })
+                    @Html.ActionLink("Первая", "Index", new { letter = Model.Letter, page = 1 })
                 </li>
                 <li>
-                    @Html.ActionLink("Предыдущая", "Index", new { page = Model.Pager.CurrentPage - 1 })
+                    @Html.ActionLink("Предыдущая", "Index", new { letter = Model.Letter, page = Model.Pager.CurrentPage - 1 })
                 </li>
             }
 
@@ -145,10 +155,10 @@
             @if (Model.Pager.CurrentPage < Model.Pager.TotalPages)
             {
                 <li>
-                    @Html.ActionLink("Следующая", "Index", new { page = Model.Pager.CurrentPage + 1 })
+                    @Html.ActionLink("Следующая", "Index", new { letter = Model.Letter, page = Model.Pager.CurrentPage + 1 })
                 </li>
                 <li>
-                    @Html.ActionLink("Последняя", "Index", new { page = Model.Pager.TotalPages })
+                    @Html.ActionLink("Последняя", "Index", new { letter = Model.Letter, page = Model.Pager.TotalPages })
                 </li>
             }
         </ul>
