--- a/IT-Inventory/Views/Histories/Index.cshtml
+++ b/IT-Inventory/Views/Histories/Index.cshtml
@@ -96,7 +96,7 @@
             }
             <td>
                 <a href='@Url.Action("Delete", new { id = item.Id })' style="text-decoration:none">
-                    <i class="material-icons md-48" style="color:black" title="Удалить">delete_forever</i>
+                    <i class="material-icons md-48" style="color:black" title="Удалить">&#xE92B</i>
                 </a>
             </td>
         </tr>
