--- a/IT-Inventory/Views/Histories/Recieve.cshtml
+++ b/IT-Inventory/Views/Histories/Recieve.cshtml
@@ -33,7 +33,7 @@
         </td>
         <td>
             <a href='@Url.Action("Delete", new { id = item.Id })' style="text-decoration:none">
-                <i class="material-icons md-48" style="color:black" title="Удалить">delete_forever</i>
+                <i class="material-icons md-48" style="color:black" title="Удалить">&#xE92B</i>
             </a>
         </td>
     </tr>
