--- a/IT-Inventory/Views/Home/Index.cshtml
+++ b/IT-Inventory/Views/Home/Index.cshtml
@@ -47,7 +47,7 @@
         <h2>Справочники</h2>
         <p>@Html.ActionLink("Офисы", "Index", "Offices")</p>
         <p>@Html.ActionLink("Департаменты", "Index", "Departments")</p>
-        <p>@Html.ActionLink("Сотрудники (обновить)", "Index", "People", new { updateList = true }, null)</p>
+        @*<p>@Html.ActionLink("Сотрудники (обновить)", "Index", "People", new { updateList = true }, null)</p>*@
         <p>@Html.ActionLink("Характеристики оборудования", "Index", "ItemAttributes")</p>
         <p>@Html.ActionLink("Типы оборудования", "Index", "ItemTypes")</p>
     </div>
