--- a/IT-Inventory/Views/Items/Index.cshtml
+++ b/IT-Inventory/Views/Items/Index.cshtml
@@ -78,7 +78,7 @@ else
                         <td>
                             @if (item.Location == null)
                             {
-                                <text>Железноводская</text>
+                                <text>Железноводская, 11</text>
                             }
                             else
                             {
